# trappist

./: README.md  globals.c  key.c  main.c  menu.c  menu.h  meson.build  output.c  pixmap.c  render.c  seat.c  surface.c  timer.c  trappist.h
Documentation/: menu.xml
ccan/: config.h
fdicons/: .editorconfig  LICENSE  README.md  fdicons.c  fdicons.syms  meson.build
fdicons/include/: database.h  fdicons.h  meson.build
fdicons/src/: database.c  ini.c  lookup.c
include/: conf.h  icon.h  menu.h  talloc-helpers.h  trappist.h
src/: conf.c  icon.c  main.c  menu.c  pixmap.c  render.c  search.c
subprojects/: libsfdo.wrap  sway-client-helpers.wrap
sway-client-helpers/: README.md  cairo.c  log.c  loop.c  meson.build  pango.c  pool-buffer.c  unicode.c  util.c
sway-client-helpers/include/sway-client-helpers/: cairo_util.h  log.h  loop.h  pango.h  pool-buffer.h  unicode.h  util.h
